@@ -2,6 +2,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [API Changes]
+    - Helper methods from List::Util - `min`, `max` and `sum0` - plus JSON functions
+    from JSON::MaybeUTF8 now injected into classes by default
 
 0.003     2021-04-27 14:57:49+08:00 Asia/Kuala_Lumpur
     [Bugs fixed]
